--- a/styles/style.css
+++ b/styles/style.css
@@ -4,9 +4,10 @@
 :root {
   --background: #36ffe460;
   --accent: #80ae9f;
+  --accentdark: #d8eee6;
   --text: #F4F4F4;
   --black: #2C2C2C;
-  --white: #F4F4F4;
+  --white: #ffffff;
 }
 
 body {
@@ -44,12 +45,13 @@ to {background-position: -100px 0px;background-size:2750px;}
   box-shadow: 2px 2px 2px rgba(0, 0, 0, 0.203);
   display: flex;
   align-items: center;
+  justify-content: center;
 }
 
 .main__left {
   width: 40%;
   display: flex;
-  justify-content: space-around;
+  justify-content: left;
 }
 
 .main__right {
@@ -58,7 +60,16 @@ to {background-position: -100px 0px;background-size:2750px;}
 }
 
 .name {
-  font-size: 2em;
+  font-size: 3em;
+  margin-bottom: 0;
+  margin-top: 0;
+  text-shadow: 2px 2px 2px rgba(0, 0, 0, 0.203);
+}
+
+.name2 {
+  font-size: 1.1em;
+  margin-bottom: 0.5em;
+  margin-top: 0em
 }
 
 .tile {
@@ -71,6 +82,19 @@ to {background-position: -100px 0px;background-size:2750px;}
   justify-content: space-around;
   padding: 2em;
   box-shadow: 4px 4px 4px rgba(0, 0, 0, 0.203);
+}
+
+.abtimg {
+  width: 32px;
+  height: 32px;
+}
+
+.main__abt {
+  display: flex;
+  align-items: center;
+  gap: 20px;
+  font-weight: bold;
+  font-size: 1.2em;
 }
 
 .footer {
@@ -116,12 +140,98 @@ to {background-position: -100px 0px;background-size:2750px;}
   height: 30px;
 }
 
+.container{
+  position: relative;
+  max-width: 500px;
+  width: 100%;
+  background: var(--accentdark);
+  margin: 0;
+  padding: 10px 20px;
+  border-radius: 7px;
+}
+.container .skill-box{
+  width: 100%;
+  margin: 25px 0;
+}
+.skill-box .title{
+  display: block;
+  font-size: 16px;
+  font-weight: bold;
+  color: var(--black);
+}
+.skill-box .skill-bar{
+  height: 8px;
+  width: 100%;
+  border-radius: 6px;
+  margin-top: 6px;
+  background: rgba(0,0,0,0.1);
+}
+.skill-bar .skill-per{
+  position: relative;
+  display: block;
+  height: 100%;
+  width: 40%;
+  border-radius: 6px;
+  background: var(--accent);
+  animation: progress 0.4s ease-in-out forwards;
+  opacity: 0;
+}
+.skill-per.css{
+  width: 30%;
+  animation-delay: 0.1s;
+}
+.skill-per.javascript{
+  width: 20%;
+  animation-delay: 0.2s;
+}
+.skill-per.nodejs{
+  width: 30%;
+  animation-delay: 0.3s;
+}
+@keyframes progress {
+  0%{
+      width: 0;
+      opacity: 1;
+  }
+  100%{
+      opacity: 1;
+  }
+}
+.skill-per .tooltip{
+  position: absolute;
+  right: -14px;
+  top: -28px;
+  font-size: 9px;
+  font-weight: bold;
+  color: #fff;
+  padding: 2px 6px;
+  border-radius: 3px;
+  background: var(--accent);
+  z-index: 1;
+}
+.tooltip::before {
+  content: '';
+  position: absolute;
+  left: 50%;
+  bottom: -2px;
+  height: 10px;
+  width: 10px;
+  z-index: -1;
+  background-color: var(--accent);
+  transform: translateX(-50%) rotate(45deg);
+}
+
 /* DIT IS DE TEXT SCROLL */
 
-/* .praat {
+.praat {
   height: 100vh;
   width: 30%;
   overflow: hidden;
+  position: absolute;
+  left: 0;
+  top: 0;
+  bottom: 0;
+  z-index: -1;
 }
 
 .big {
@@ -129,9 +239,9 @@ to {background-position: -100px 0px;background-size:2750px;}
   align-items: center;
   transform: rotate(-90deg);
   margin-left: -5em;
-} */
+}
 
-/* .scroll {
+.scroll {
   white-space: nowrap;
   margin: 0 2em;
 }
@@ -143,17 +253,17 @@ to {background-position: -100px 0px;background-size:2750px;}
 
 .scroll p {
   text-shadow: 4px 4px 4px rgba(0, 0, 0, .075);
-} */
+}
 
-/* .scroll p {
+.scroll p {
   font-size: 10em;
-  color: var(--text);
+  color: rgba(255, 255, 255, 0.61);
   font-weight: bold;
   margin-bottom: 0;
   line-height: 10px;
-} */
+} 
 
-/* .right-to-left {
+.right-to-left {
   animation: RightToLeft 700s infinite linear;
 }
 
@@ -177,4 +287,4 @@ to {background-position: -100px 0px;background-size:2750px;}
   to {
     transform: translateX(0%);
   }
-} */
+}
