--- a/styles/style.css
+++ b/styles/style.css
@@ -41,6 +41,8 @@ to {background-position: -100px 0px;background-size:2750px;}
 }
 
 .main__img {
+  /* height: 10%;
+  width: auto; */
   border-radius: 8px;
   box-shadow: 2px 2px 2px rgba(0, 0, 0, 0.203);
   display: flex;
@@ -74,8 +76,8 @@ to {background-position: -100px 0px;background-size:2750px;}
 
 .tile {
   background-color: var(--white);
-  height: 50%;
-  width: 50%;
+  width: 60vw;
+  height: 55vh;
   border-radius: 8px;
   margin: auto;
   display: flex;
@@ -146,6 +148,7 @@ to {background-position: -100px 0px;background-size:2750px;}
   width: 100%;
   background: var(--accentdark);
   margin: 0;
+  margin-top: 0.1em;
   padding: 10px 20px;
   border-radius: 7px;
 }
