--- a/styles/style.css
+++ b/styles/style.css
@@ -1,12 +1,12 @@
-@import url('https://fonts.googleapis.com/css2?family=Quicksand&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Archivo+Black&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Quicksand&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Archivo+Black&display=swap");
 
 :root {
   --background: #36ffe460;
   --accent: #80ae9f;
   --accentdark: #d8eee6;
-  --text: #F4F4F4;
-  --black: #2C2C2C;
+  --text: #f4f4f4;
+  --black: #2c2c2c;
   --white: #ffffff;
 }
 
@@ -16,25 +16,38 @@ body {
   /* BACKGROUND-COLOR: Zegt iets over de achtergrond kleur. */
   background-color: var(--background);
   /* FONT-FAMILY: Zegt iets over welk font gebruikt wordt op de webiste. */
-  font-family: 'Quicksand', sans-serif;
+  font-family: "Quicksand", sans-serif;
 
-  background-image: url('../assets/background.jpeg');
+  background-image: url("../assets/background.jpeg");
   background-size: cover;
   animation: slidein 100s;
   animation-fill-mode: forwards;
   animation-iteration-count: infinite;
-  animation-direction: alternate;         
+  animation-direction: alternate;
 }
 
 /* BRON: https://alvarotrigo.com/blog/animated-backgrounds-css/ */
 @-webkit-keyframes slidein {
-from {background-position: top; background-size:3000px; }
-to {background-position: -100px 0px;background-size:2750px;}
+  from {
+    background-position: top;
+    background-size: 3000px;
+  }
+
+  to {
+    background-position: -100px 0px;
+    background-size: 2750px;
+  }
 }
 
 @keyframes slidein {
-from {background-position: top;background-size:3000px; }
-to {background-position: -100px 0px;background-size:2750px;}
+  from {
+    background-position: top;
+    background-size: 3000px;
+  }
+  to {
+    background-position: -100px 0px;
+    background-size: 2750px;
+  }
 }
 
 .main__container {
@@ -82,7 +95,7 @@ to {background-position: -100px 0px;background-size:2750px;}
 .name2 {
   font-size: 1.1em;
   margin-bottom: 0.5em;
-  margin-top: 0em
+  margin-top: 0em;
 }
 
 .tile {
@@ -121,11 +134,11 @@ to {background-position: -100px 0px;background-size:2750px;}
   display: flex;
   justify-content: space-between;
   align-items: center;
-  opacity: .7;
+  opacity: 0.7;
 }
 
 .footer__text {
-  font-size: .7em;
+  font-size: 0.7em;
   padding: 1em;
   line-height: 8px;
   color: var(--text);
@@ -159,7 +172,7 @@ to {background-position: -100px 0px;background-size:2750px;}
 /* DIT IS DE SKILLS BOX */
 /* BRON (ONGEVEER): https://www.youtube.com/watch?v=IHQMOklyqXM&ab_channel=DarkCode */
 
-.container{
+.container {
   position: relative;
   max-width: 500px;
   width: 100%;
@@ -169,24 +182,28 @@ to {background-position: -100px 0px;background-size:2750px;}
   padding: 10px 20px;
   border-radius: 7px;
 }
-.container .skill-box{
+
+.container .skill-box {
   width: 100%;
   margin: 25px 0;
 }
-.skill-box .title{
+
+.skill-box .title {
   display: block;
   font-size: 16px;
   font-weight: bold;
   color: var(--black);
 }
-.skill-box .skill-bar{
+
+.skill-box .skill-bar {
   height: 8px;
   width: 100%;
   border-radius: 6px;
   margin-top: 6px;
-  background: rgba(0,0,0,0.1);
+  background: rgba(0, 0, 0, 0.1);
 }
-.skill-bar .skill-per{
+
+.skill-bar .skill-per {
   position: relative;
   display: block;
   height: 100%;
@@ -196,28 +213,33 @@ to {background-position: -100px 0px;background-size:2750px;}
   animation: progress 0.4s ease-in-out forwards;
   opacity: 0;
 }
-.skill-per.css{
+
+.skill-per.css {
   width: 30%;
   animation-delay: 0.1s;
 }
-.skill-per.javascript{
+
+.skill-per.javascript {
   width: 20%;
   animation-delay: 0.2s;
 }
-.skill-per.nodejs{
+
+.skill-per.nodejs {
   width: 30%;
   animation-delay: 0.3s;
 }
+
 @keyframes progress {
-  0%{
-      width: 0;
-      opacity: 1;
+  0% {
+    width: 0;
+    opacity: 1;
   }
-  100%{
-      opacity: 1;
+  100% {
+    opacity: 1;
   }
 }
-.skill-per .tooltip{
+
+.skill-per .tooltip {
   position: absolute;
   right: -14px;
   top: -28px;
@@ -229,8 +251,9 @@ to {background-position: -100px 0px;background-size:2750px;}
   background: var(--accent);
   z-index: 1;
 }
+
 .tooltip::before {
-  content: '';
+  content: "";
   position: absolute;
   left: 50%;
   bottom: -2px;
@@ -273,7 +296,7 @@ to {background-position: -100px 0px;background-size:2750px;}
 }
 
 .scroll p {
-  text-shadow: 4px 4px 4px rgba(0, 0, 0, .075);
+  text-shadow: 4px 4px 4px rgba(0, 0, 0, 0.075);
 }
 
 .scroll p {
@@ -282,13 +305,13 @@ to {background-position: -100px 0px;background-size:2750px;}
   font-weight: bold;
   margin-bottom: 0;
   line-height: 10px;
-} 
+}
 
 .right-to-left {
   animation: RightToLeft 700s infinite linear;
 }
 
-@keyframes  RightToLeft {
+@keyframes RightToLeft {
   from {
     transform: translateX(-10%);
   }
@@ -301,7 +324,7 @@ to {background-position: -100px 0px;background-size:2750px;}
   animation: LeftToRight 700s infinite linear;
 }
 
-@keyframes  LeftToRight {
+@keyframes LeftToRight {
   from {
     transform: translateX(-50%);
   }
